# Video-games-sales-predictions

./: main.py  pt_gabi.ipynb  pyproject.toml  videoGamePricesPredictions (2).ipynb  videoGamePricesPredictions.ipynb
